// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FieldLabel FieldLabel 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Default label
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots FieldLabel with HelpText 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Default label
        </span>
        <p
          class="Text-sc-1wu7vpu-0 HelpText__HelpTextContent-sc-1jzmq2g-0 gYbAkC"
          color="currentColor"
          font-size="16px"
        >
          I am help text. I can be a string or a node that includes a 
          <a
            class="Link-sc-1lpx3d0-0 hFcUQo"
            color="blue"
            href="http://nulogy.design"
          >
            link
          </a>
          .
        </p>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots FieldLabel with RequirementText 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Default label
        </span>
        <span
          class="Text-sc-1wu7vpu-0 AJnss"
          color="darkGrey"
          font-size="12px"
        >
          (Required)
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots FieldLabel with all additional text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Default label
        </span>
        <span
          class="Text-sc-1wu7vpu-0 AJnss"
          color="darkGrey"
          font-size="12px"
        >
          (Required)
        </span>
        <p
          class="Text-sc-1wu7vpu-0 HelpText__HelpTextContent-sc-1jzmq2g-0 gYbAkC"
          color="currentColor"
          font-size="16px"
        >
          I am help text. I can give more details on the input below!
        </p>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots FieldLabel with associated custom input component 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 iPmvAN"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Default label
        </span>
        <span
          class="Text-sc-1wu7vpu-0 AJnss"
          color="darkGrey"
          font-size="12px"
        >
          (Required)
        </span>
        <p
          class="Text-sc-1wu7vpu-0 HelpText__HelpTextContent-sc-1jzmq2g-0 gYbAkC"
          color="currentColor"
          font-size="16px"
        >
          I am help text. I can give more details on the input below!
        </p>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <div
          class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 PZCMZ"
        >
          <div
            class="Box-sc-1qu1edy-0 klanzh"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              id="input1"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
